html & css started

--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>XLNT</title>
 </head>
 
 <body>
-	
+	<nav>
+		<ul>
+			<li>
+				<a href="index.html"><img src="logo.png"></a>
+			</li>
+		</ul>
+	</nav>
+	<section>
+		<div>
+			<h1>En ung frontend webbyrå med fokus på responsiv design</h1>
+		</div>
+		<span></span>
+		<button><p>Kontakta oss</P></button>
+	</section>
+	<section>
+		<h1>Vi är experter på responsiv design</h1>
+		<span></span>
+		<figure><img src="responsive.png"></figure>
+		<p>Vi fixar webplater för alla dina enheter med en smidig responsiv design för att få maxial upplevelse på din hemsida </p>
+		<button><p>läs mer</p></button>
+	</section>
+	<section>
+		<h1>Smakprov på våra projekt</h1>
+		<span></span>
+		<div class="flex-container-projekt">
+			<figure class="flex-item"></figure>
+			<figure class="flex-item"></figure>
+			<figure class="flex-item"></figure>
+			<figure class="flex-item"></figure>
+		</div>
+		<p>Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!</p>
+		<button><p>Beställ nu!</p></button>
+	</section>
+	<section>
+		<div>
+			<h1>VÅRAT TEAM</h1>
+		</div>
+		<div>
+			<p>År 2016 så började vi våran resa tillsammans på nackademin i stockholm och vi bestämde oss för att starta en egen webbyrå.
+				Vill du lära känna oss bättre så kan du trycka här.</p>
+		</div>
+		<button><p>Läs mer!</p><button>
+</section>
+<section>
+<h1></h1>
+</section>
 </body>
 </html>
