--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<title>XLNT</title>
 </head>
 
@@ -12,27 +13,30 @@
 	<nav>
 		<ul>
 			<li>
-				<a href="index.html"><img src="logo.png"></a>
+				<a href="index.html"><img src="img/xlntlogga.png"></a>
 			</li>
 		</ul>
 	</nav>
 	<section>
 		<div>
-			<h1>En ung frontend webbyrå med fokus på responsiv design</h1>
+			<h1 class="title-h1">En ung frontend webbyrå med fokus på responsiv design</h1>
 		</div>
-		<span></span>
+		<!--<span class="orange"></span>-->
+		<div class="orange"></div>
 		<button><p>Kontakta oss</P></button>
 	</section>
 	<section>
-		<h1>Vi är experter på responsiv design</h1>
-		<span></span>
-		<figure><img src="responsive.png"></figure>
+		<h1 class="title-h1">Vi är experter på responsiv design</h1>
+		<!--<span class="orange"></span>-->
+		<div class="orange"></div>
+		<figure><img src="img/responsive.png"></figure>
 		<p>Vi fixar webplater för alla dina enheter med en smidig responsiv design för att få maxial upplevelse på din hemsida </p>
 		<button><p>läs mer</p></button>
 	</section>
 	<section>
-		<h1>Smakprov på våra projekt</h1>
-		<span></span>
+		<h1 class="title-h1">Smakprov på våra projekt</h1>
+		<!--<span class="orange"></span>-->
+		<div class="orange"></div>
 		<div class="flex-container-projekt">
 			<figure class="flex-item"></figure>
 			<figure class="flex-item"></figure>
@@ -44,7 +48,7 @@
 	</section>
 	<section>
 		<div>
-			<h1>VÅRAT TEAM</h1>
+			<h1 class="title-h1">VÅRAT TEAM</h1>
 		</div>
 		<div>
 			<p>År 2016 så började vi våran resa tillsammans på nackademin i stockholm och vi bestämde oss för att starta en egen webbyrå.
