--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</li>
 		</ul>
 	</nav>
-	<section>
+	<section class="page-1">
 		<div>
 			<h1 class="title-h1">En ung frontend webbyrå med fokus på responsiv design</h1>
 		</div>
