Nav moved into sec-1 and opacity is set

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-	<nav>
-		<ul>
-			<li>
-				<a href="index.html"><img src="img/xlntlogga.png"></a>
-			</li>
-		</ul>
-	</nav>
 	<section class="page-1">
+		<nav class="navbar">
+			<ul>
+				<li>
+					<a href="index.html"><img class="logo-img" src="img/xlntlogga.png"></a>
+				</li>
+			</ul>
+		</nav>
 		<div>
 			<h1 class="title-h1">En ung frontend webbyrå med fokus på responsiv design</h1>
 		</div>
