New logo on page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<nav class="navbar">
 			<ul>
 				<li>
-					<a href="index.html"><img class="logo-img" src="img/xlntlogga.png"></a>
+					<a href="index.html"><img class="logo-img" src="img/xlnt-logo-official.png"></a>
 				</li>
 			</ul>
 		</nav>
