page-1 almost done navbar still needs hamburger and styling

--- a/index.html
+++ b/index.html
@@ -18,24 +18,22 @@
 				</li>
 			</ul>
 		</nav>
-		<div>
+		<div class="page-1-div">
 			<h1 class="title-h1">En ung frontend webbyrå med fokus på responsiv design</h1>
+			<div class="orange"></div>
+		<button class="btn">Kontakta oss</button>
 		</div>
-		<!--<span class="orange"></span>-->
-		<div class="orange"></div>
-		<button><p>Kontakta oss</P></button>
 	</section>
-	<section>
+	<section class="page-2">
 		<h1 class="title-h1">Vi är experter på responsiv design</h1>
-		<!--<span class="orange"></span>-->
+
 		<div class="orange"></div>
 		<figure><img src="img/responsive.png"></figure>
-		<p>Vi fixar webplater för alla dina enheter med en smidig responsiv design för att få maxial upplevelse på din hemsida </p>
-		<button><p>läs mer</p></button>
+		Vi fixar webplater för alla dina enheter med en smidig responsiv design för att få maxial upplevelse på din hemsida 
+		<button class="btn">läs mer</button>
 	</section>
 	<section>
 		<h1 class="title-h1">Smakprov på våra projekt</h1>
-		<!--<span class="orange"></span>-->
 		<div class="orange"></div>
 		<div class="flex-container-projekt">
 			<figure class="flex-item"></figure>
@@ -43,20 +41,20 @@
 			<figure class="flex-item"></figure>
 			<figure class="flex-item"></figure>
 		</div>
-		<p>Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!</p>
-		<button><p>Beställ nu!</p></button>
+		Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!
+		<button class="btn">Beställ nu!</button>
 	</section>
-	<section>
+	<section class="page-3">
 		<div>
 			<h1 class="title-h1">VÅRAT TEAM</h1>
 		</div>
 		<div>
-			<p>År 2016 så började vi våran resa tillsammans på nackademin i stockholm och vi bestämde oss för att starta en egen webbyrå.
-				Vill du lära känna oss bättre så kan du trycka här.</p>
+			År 2016 så började vi våran resa tillsammans på nackademin i stockholm och vi bestämde oss för att starta en egen webbyrå.
+				Vill du lära känna oss bättre så kan du trycka här.
 		</div>
-		<button><p>Läs mer!</p><button>
+		<button class="btn">Läs mer!<button>
 </section>
-<section>
+<section class="page-4">
 <h1></h1>
 </section>
 </body>
