--- a/index.html
+++ b/index.html
@@ -10,28 +10,36 @@
 </head>
 
 <body>
-	<nav>
-		<ul>
-			<li>
-				<a href="index.html"><img src="img/xlntlogga.png"></a>
-			</li>
-		</ul>
-	</nav>
 	<section class="page-1">
+		<nav class="navbar">
+			<ul>
+				<li>
+					<a href="index.html"><img class="logo-img" src="img/xlntlogga.png"></a>
+				</li>
+				<li>
+					<div id="nav-icon">
+					  <span></span>
+					  <span></span>
+					  <span></span>
+					  <span></span>
+					</div>
+				</li>	
+			</ul>
+		</nav>
 		<div>
 			<h1 class="title-h1">En ung frontend webbyrå med fokus på responsiv design</h1>
 		</div>
 		<!--<span class="orange"></span>-->
 		<div class="orange"></div>
-		<button>Kontakta oss</button>
+		<button><p>Kontakta oss</P></button>
 	</section>
 	<section>
 		<h1 class="title-h1">Vi är experter på responsiv design</h1>
 		<!--<span class="orange"></span>-->
 		<div class="orange"></div>
 		<figure><img src="img/responsive.png"></figure>
-		Vi fixar webplater för alla dina enheter med en smidig responsiv design för att få maxial upplevelse på din hemsida 
-		<button>läs mer</button>
+		<p>Vi fixar webplater för alla dina enheter med en smidig responsiv design för att få maxial upplevelse på din hemsida </p>
+		<button><p>läs mer</p></button>
 	</section>
 	<section>
 		<h1 class="title-h1">Smakprov på våra projekt</h1>
@@ -43,21 +51,22 @@
 			<figure class="flex-item"></figure>
 			<figure class="flex-item"></figure>
 		</div>
-		Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!
-		<button>Beställ nu!</button>
+		<p>Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!</p>
+		<button><p>Beställ nu!</p></button>
 	</section>
 	<section>
 		<div>
 			<h1 class="title-h1">VÅRAT TEAM</h1>
 		</div>
 		<div>
-			År 2016 så började vi våran resa tillsammans på nackademin i stockholm och vi bestämde oss för att starta en egen webbyrå.
-				Vill du lära känna oss bättre så kan du trycka här.
+			<p>År 2016 så började vi våran resa tillsammans på nackademin i stockholm och vi bestämde oss för att starta en egen webbyrå.
+				Vill du lära känna oss bättre så kan du trycka här.</p>
 		</div>
-		<button>Läs mer!<button>
+		<button><p>Läs mer!</p><button>
 </section>
 <section>
 <h1></h1>
 </section>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
