page-1 button finaldone

--- a/index.html
+++ b/index.html
@@ -19,18 +19,17 @@
 			</ul>
 		</nav>
 		<div class="page-1-div">
-			<h1 class="title-h1">En ung frontend webbyrå med fokus på responsiv design</h1>
+			<h1 class="page-1-title-h1">En ung frontend webbyrå med fokus på responsiv design</h1>
 			<div class="orange"></div>
-		<button class="btn">Kontakta oss</button>
+			<a href="http://www.google.com" class="btn">Kontakta oss</a>
 		</div>
 	</section>
 	<section class="page-2">
-		<h1 class="title-h1">Vi är experter på responsiv design</h1>
-
+	<h1 class="page-2-title-h1">Vi är experter på responsiv design</h1>
 		<div class="orange"></div>
-		<figure><img src="img/responsive.png"></figure>
+		<figure class="img-container"><img src="img/responsive.png"></figure>
 		Vi fixar webplater för alla dina enheter med en smidig responsiv design för att få maxial upplevelse på din hemsida 
-		<button class="btn">läs mer</button>
+		<a class="btn-page-2">läs mer</a>
 	</section>
 	<section class="page-3">
 		<h1 class="title-h1">Smakprov på våra projekt</h1>
@@ -42,7 +41,7 @@
 			<figure class="flex-item"></figure>
 		</div>
 		Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!
-		<button class="btn">Beställ nu!</button>
+		<a class="btn">Beställ nu!</a>
 	</section>
 	<section class="page-4">
 		<div>
@@ -50,12 +49,12 @@
 		</div>
 		<div>
 			År 2016 så började vi våran resa tillsammans på nackademin i stockholm och vi bestämde oss för att starta en egen webbyrå.
-				Vill du lära känna oss bättre så kan du trycka här.
+			Vill du lära känna oss bättre så kan du trycka här.
 		</div>
-		<button class="btn">Läs mer!<button>
-</section>
-<section class="page-5">
-<h1></h1>
-</section>
-</body>
-</html>
+		<a class="btn">Läs mer!<a>
+		</section>
+		<section class="page-5">
+			<h1></h1>
+		</section>
+	</body>
+	</html>
