changes on page-2

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 		</nav>
 		<div class="page-1-div">
 			<h1 class="page-1-title-h1">En ung frontend webbyrå med fokus på responsiv design</h1>
-			<div class="orange"></div>
-			<a href="http://www.google.com" class="btn">Kontakta oss</a>
+			<div class="orange-page-1"></div>
+			<a href="http://www.google.com" class="btn-page-1">Kontakta oss</a>
 		</div>
 	</section>
 	<section class="page-2">
 	<h1 class="page-2-title-h1">Vi är experter på responsiv design</h1>
-		<div class="orange"></div>
-		<figure class="img-container"><img src="img/responsive.png"></figure>
-		Vi fixar webplater för alla dina enheter med en smidig responsiv design för att få maxial upplevelse på din hemsida 
-		<a class="btn-page-2">läs mer</a>
+		<div class="orange-page-2"></div>
+		<img src="img/responsive.png">
+			Vi fixar webplater för alla dina enheter med en smidig responsiv design för att få maxial upplevelse på din hemsida 
+		<a href="#" class="btn-page-2">Läs mer</a>
 	</section>
 	<section class="page-3">
 		<h1 class="title-h1">Smakprov på våra projekt</h1>
