--- a/index.html
+++ b/index.html
@@ -27,34 +27,65 @@
 	<section class="page-2">
 	<h1 class="page-2-title-h1">Vi är experter på responsiv design</h1>
 		<div class="orange-page-2"></div>
-		<img src="img/responsive.png">
-			Vi fixar webplater för alla dina enheter med en smidig responsiv design för att få maxial upplevelse på din hemsida 
+		<img src="img/responsive-phone.png">
+			<p class="page-2-p">
+				Vi fixar webplater för alla dina enheter 
+				med en smidig responsiv design 
+				för att få maxial upplevelse på din hemsida. 
+			</p>
 		<a href="#" class="btn-page-2">Läs mer</a>
 	</section>
 	<section class="page-3">
-		<h1 class="title-h1">Smakprov på våra projekt</h1>
-		<div class="orange"></div>
-		<div class="flex-container-projekt">
-			<figure class="flex-item"></figure>
-			<figure class="flex-item"></figure>
-			<figure class="flex-item"></figure>
-			<figure class="flex-item"></figure>
+		<h1 class="page-3-title-h1">Smakprov på våra projekt</h1>
+		<div class="orange-page-3"></div>
+		<div class="page-3-flex-container">
+			<figure class="flex-item">INSERT PICS</figure>
+			<figure class="flex-item">INSERT PICS</figure>
+			<figure class="flex-item">INSERT PICS</figure>
+			<figure class="flex-item">INSERT PICS</figure>
 		</div>
-		Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!
-		<a class="btn">Beställ nu!</a>
+		<p class="page-3-p">
+			Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!
+		</p>
+		<a href="#" class="btn-page-3">Beställ nu!</a>
 	</section>
 	<section class="page-4">
-		<div>
-			<h1 class="title-h1">VÅRAT TEAM</h1>
+		<div class="title-div">
+			<h1 class="page-4-title-h1">VÅRAT TEAM</h1>
 		</div>
-		<div>
-			År 2016 så började vi våran resa tillsammans på nackademin i stockholm och vi bestämde oss för att starta en egen webbyrå.
-			Vill du lära känna oss bättre så kan du trycka här.
+		<div class="p-div">
+			<p class="page-4-p">
+				År 2016 så började vi vår resa tillsammans på Nackademin i Stockholm och vi bestämde oss för att starta en egen webbyrå.
+			    Vill du lära känna oss bättre så kan du trycka här.
+			</p>
 		</div>
-		<a class="btn">Läs mer!<a>
+		<a href="#" class="btn-page-4">Läs mer!<a>
 		</section>
 		<section class="page-5">
-			<h1></h1>
+			<h1 class="page-5-title-h1">Kontakta oss</h1>
+			<div class="orange-page-5"></div>
+			<p class="page-5-p">
+				Skriv till oss om du vill att vi ska
+				designa din hemsida eller om du undrar något!
+			</p>
+			<form>
+			<input class="contact" type="text" name="name" placeholder="Namn">
+			<input class="contact" type="text" name="email" placeholder="Email">
+			<textarea class="txt-style" placeholder="Kommentar"></textarea> 
+			<input class="btn-page-5" type="submit" name="Skicka"></input>
+			</form>
 		</section>
+		<footer>
+			<h2>Adress</h2>
+			<p>Sjumilaskogen 7</p>
+			<p>1337 - Stockholm</p>
+			<h2>Följ oss</h2>
+            <a href="#"><i class="fa fa-facebook-square icon-size" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-twitter-square icon-size" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-linkedin icon-size"></i></a>
+
+		</footer>
+
+<script src="https://use.fontawesome.com/656255a524.js"></script>
 	</body>
 	</html>
