--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 				<li>
 					<a href="index.html"><img class="logo-img" src="img/xlnt-logo-official.png"></a>
 				</li>
+				<li>
+					<div id="nav-icon">
+					  <span></span>
+					  <span></span>
+					  <span></span>
+					  <span></span>
+					</div>
+				</li> 
 			</ul>
 		</nav>
 		<div class="page-1-div">
