--- a/index.html
+++ b/index.html
@@ -95,5 +95,6 @@
 		</footer>
 
 <script src="https://use.fontawesome.com/656255a524.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 	</body>
 	</html>
