--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
 	<section class="page-1">
 		<nav class="navbar">
-			<ul>
-				<li>
-					<a href="index.html"><img class="logo-img" src="img/xlnt-logo-official.png"></a>
+			<ul class="flex-box">
+				<li class="test">
+					<a href="index.html"><img class="logo-img" src="img/xlnt-logo-official-new.png"></a>
 				</li>
-				<li>
-					<div id="nav-icon">
+				<li class="hamburger-position" align="right">
+					<div id="nav-icon" align="right">
 					  <span></span>
 					  <span></span>
 					  <span></span>
