--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-	<section class="page-1">
+	
 		<nav class="navbar">
 			<ul class="flex-box">
 				<li class="test">
 					<a href="index.html"><img class="logo-img" src="img/xlnt-logo-official-new.png"></a>
 				</li>
 				<li class="hamburger-position" align="right">
-					<div id="nav-icon" align="right">
+					<div id="nav-icon" align="right" onclick="buttonpress()">
 					  <span></span>
 					  <span></span>
 					  <span></span>
@@ -25,7 +25,22 @@
 					</div>
 				</li> 
 			</ul>
+		<div class="box active"><p>Hej</p>
+		<ul>
+			<li>Menu</li>
+			<li>Things</li>
+			<li>Stuff</li>
+			<li>Bleh</li>
+			<li>Sjkuuu</li>
+			<li>Ritalitianitta</li>
+			<li>Knappert</li>
+			<li>fisk</li>
+			<li>things</li>
+			<li>stuff</li>
+		</ul>
+		</div>
 		</nav>
+		<section class="page-1">
 		<div class="page-1-div">
 			<h1 class="page-1-title-h1">En ung frontend webbyrå med fokus på responsiv design</h1>
 			<div class="orange-page-1"></div>
