Fixed menu animation and style

--- a/index.html
+++ b/index.html
@@ -25,18 +25,13 @@
 					</div>
 				</li> 
 			</ul>
-		<div class="box active"><p>Hej</p>
-		<ul>
-			<li>Menu</li>
-			<li>Things</li>
-			<li>Stuff</li>
-			<li>Bleh</li>
-			<li>Sjkuuu</li>
-			<li>Ritalitianitta</li>
-			<li>Knappert</li>
-			<li>fisk</li>
-			<li>things</li>
-			<li>stuff</li>
+		<div class="box active">
+		<ul class="menuDropdownUL">
+			<li class="menuDropdown">Hem</li>
+			<li class="menuDropdown">Responsiv design</li>
+			<li class="menuDropdown">Tidigare projekt</li>
+			<li class="menuDropdown">Vårat team</li>
+			<li class="menuDropdown">Kontakta oss</li>
 		</ul>
 		</div>
 		</nav>
