--- a/index.html
+++ b/index.html
@@ -11,48 +11,59 @@
 
 <body>
 	
-		<nav class="navbar">
-			<ul class="flex-box">
-				<li class="test">
-					<a href="index.html"><img class="logo-img" src="img/xlnt-logo-official-new.png"></a>
-				</li>
-				<li class="hamburger-position" align="right">
-					<div id="nav-icon" align="right" onclick="buttonpress()">
-					  <span></span>
-					  <span></span>
-					  <span></span>
-					  <span></span>
-					</div>
-				</li> 
-			</ul>
-		<div class="box active">
-		<ul class="menuDropdownUL">
-			<li class="menuDropdown">Hem</li>
-			<li class="menuDropdown">Responsiv design</li>
-			<li class="menuDropdown">Tidigare projekt</li>
-			<li class="menuDropdown">Vårat team</li>
-			<li class="menuDropdown">Kontakta oss</li>
+	<nav class="navbar">
+		<ul class="flex-box">
+			<li class="test">
+				<a href="index.html"><img class="logo-img" src="img/xlnt-logo-official-new.png"></a>
+			</li>
+			<li class="hamburger-position" align="right">
+				<div id="nav-icon" align="right" onclick="buttonpress()">
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+			</li> 
 		</ul>
+		<div class="box active">
+			<ul class="menuDropdownUL">
+				<div class="menuscroll" onclick="notTrue() ,smoothScroll(document.getElementById('hem'))">
+					<li class="menuDropdown">Hem</li>
+				</div>
+				<div class="menuscroll" onclick="notTrue() ,smoothScroll(document.getElementById('responsiv'))"><li class="menuDropdown">Responsiv design</li></div>
+				<div class="menuscroll" onclick="notTrue() ,smoothScroll(document.getElementById('tidigare'))">
+					<li class="menuDropdown">Tidigare projekt</li>
+				</div>
+				<div class="menuscroll" onclick="notTrue() ,smoothScroll(document.getElementById('team'))">
+					<li class="menuDropdown">Vårat team</li>
+				</div>
+				<div class="menuscroll" onclick="notTrue() ,smoothScroll(document.getElementById('kontakt'))">
+					<li class="menuDropdown">Kontakta oss</li>
+				</div>
+			</ul>
 		</div>
-		</nav>
-		<section class="page-1">
+	</nav>
+	<section class="page-1"><div id="hem"></div>
 		<div class="page-1-div">
 			<h1 class="page-1-title-h1">En ung frontend webbyrå med fokus på responsiv design</h1>
 			<div class="orange-page-1"></div>
-			<a href="http://www.google.com" class="btn-page-1">Kontakta oss</a>
+			<button class="btn-page-1" onclick="buttonScroll(), smoothScroll(document.getElementById('kontakt'))">Kontakta oss</button>
 		</div>
 	</section>
+	<div id="responsiv"></div><br>
 	<section class="page-2">
-	<h1 class="page-2-title-h1">Vi är experter på responsiv design</h1>
+
+		<h1 class="page-2-title-h1" >Vi är experter på responsiv design</h1>
 		<div class="orange-page-2"></div>
 		<img src="img/responsive-phone.png">
-			<p class="page-2-p">
-				Vi fixar webplater för alla dina enheter 
-				med en smidig responsiv design 
-				för att få maxial upplevelse på din hemsida. 
-			</p>
+		<p class="page-2-p">
+			Vi fixar webplater för alla dina enheter 
+			med en smidig responsiv design 
+			för att få maxial upplevelse på din hemsida. 
+		</p>
 		<a href="#" class="btn-page-2">Läs mer</a>
 	</section>
+	<div id="tidigare"></div><br><br>
 	<section class="page-3">
 		<h1 class="page-3-title-h1">Smakprov på våra projekt</h1>
 		<div class="orange-page-3"></div>
@@ -67,6 +78,7 @@
 		</p>
 		<a href="#" class="btn-page-3">Beställ nu!</a>
 	</section>
+	<div id="team"></div><br>
 	<section class="page-4">
 		<div class="title-div">
 			<h1 class="page-4-title-h1">VÅRAT TEAM</h1>
@@ -74,11 +86,12 @@
 		<div class="p-div">
 			<p class="page-4-p">
 				År 2016 så började vi vår resa tillsammans på Nackademin i Stockholm och vi bestämde oss för att starta en egen webbyrå.
-			    Vill du lära känna oss bättre så kan du trycka här.
+				Vill du lära känna oss bättre så kan du trycka här.
 			</p>
 		</div>
 		<a href="#" class="btn-page-4">Läs mer!<a>
 		</section>
+		<div id="kontakt"></div><br><br><br>
 		<section class="page-5">
 			<h1 class="page-5-title-h1">Kontakta oss</h1>
 			<div class="orange-page-5"></div>
@@ -87,10 +100,10 @@
 				designa din hemsida eller om du undrar något!
 			</p>
 			<form>
-			<input class="contact" type="text" name="name" placeholder="Namn">
-			<input class="contact" type="text" name="email" placeholder="Email">
-			<textarea class="txt-style" placeholder="Kommentar"></textarea> 
-			<input class="btn-page-5" type="submit" name="Skicka"></input>
+				<input class="contact" type="text" name="name" placeholder="Namn">
+				<input class="contact" type="text" name="email" placeholder="Email">
+				<textarea class="txt-style" placeholder="Kommentar"></textarea> 
+				<input class="btn-page-5" type="submit" name="Skicka"></input>
 			</form>
 		</section>
 		<footer>
@@ -98,13 +111,13 @@
 			<p>Sjumilaskogen 7</p>
 			<p>1337 - Stockholm</p>
 			<h2>Följ oss</h2>
-            <a href="#"><i class="fa fa-facebook-square icon-size" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-twitter-square icon-size" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-linkedin icon-size"></i></a>
+			<a href="#"><i class="fa fa-facebook-square icon-size" aria-hidden="true"></i></a>
+			<a href="#"><i class="fa fa-twitter-square icon-size" aria-hidden="true"></i></a>
+			<a href="#"><i class="fa fa-linkedin icon-size"></i></a>
 
 		</footer>
 
-<script src="https://use.fontawesome.com/656255a524.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+		<script src="https://use.fontawesome.com/656255a524.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 	</html>
