--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	
+	<header>
 		<nav class="navbar">
 			<ul class="flex-box">
 				<li class="test">
@@ -35,6 +35,7 @@
 		</ul>
 		</div>
 		</nav>
+	</header>
 		<section class="page-1">
 		<div class="page-1-div">
 			<h1 class="page-1-title-h1">En ung frontend webbyrå med fokus på responsiv design</h1>
@@ -103,7 +104,7 @@
             <a href="#"><i class="fa fa-linkedin icon-size"></i></a>
 
 		</footer>
-
+<script src="js/slidingHeader.js"></script>
 <script src="https://use.fontawesome.com/656255a524.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 	</body>
