created 2 more .html and linked them to index.html with anchorpoints.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			med en smidig responsiv design 
 			för att få maxial upplevelse på din hemsida. 
 		</p>
-		<a href="#" class="btn-page-2">Läs mer</a>
+		<a href="views/responsive.html" class="btn-page-2">Läs mer</a>
 	</section>
 	<div id="tidigare"></div><br><br>
 	<section class="page-3">
@@ -75,7 +75,7 @@
 		<p class="page-3-p">
 			Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!
 		</p>
-		<a href="#" class="btn-page-3">Beställ nu!</a>
+		<a href="views/projects.html" class="btn-page-3">Beställ nu!</a>
 	</section>
 	<div id="team"></div><br>
 	<section class="page-4">
