Added TEAM site and slider

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				Vill du lära känna oss bättre så kan du trycka här.
 			</p>
 		</div>
-		<a href="#" class="btn-page-4">Läs mer!<a>
+		<a href="views/team.html" class="btn-page-4">Läs mer!<a>
 		</section>
 		<div id="kontakt"></div><br><br><br>
 		<section class="page-5">
