--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/hamburger.css">
 	<link rel="stylesheet" type="text/css" href="css/footer.css">
+	<link rel="stylesheet" type="text/css" href="css/navbar.css">
 	<title>XLNT</title>
 </head>
 
@@ -79,8 +80,8 @@
 		</p>
 		<a href="views/projects.html" class="btn-page-3">Beställ nu!</a>
 	</section>
-	<div id="team"></div><br>
-	<section class="page-4">
+	<div id="team"></div>
+	<section class="page-4" id="bg-door">
 		<div class="title-div">
 			<h1 class="page-4-title-h1">VÅRAT TEAM</h1>
 		</div>
