--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+	<div class="navdiv">
 	<nav class="navbar">
 		<ul class="flex-box">
 			<li class="test">
@@ -45,6 +46,7 @@
 			</ul>
 		</div>
 	</nav>
+</div>
 	<section class="page-1"><div id="hem"></div>
 		<div class="page-1-div">
 			<h1 class="page-1-title-h1">En ung frontend webbyrå med fokus på responsiv design</h1>
