--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<button class="btn-page-1" onclick="buttonScroll(), smoothScroll(document.getElementById('kontakt'))">Kontakta oss</button>
 		</div>
 	</section>
-	<div id="responsiv"></div><br>
+	<div id="responsiv"></div>
 	<section class="page-2">
 
 		<h1 class="page-2-title-h1" >Vi är experter på responsiv design</h1>
@@ -67,7 +67,7 @@
 		</p>
 		<a href="views/responsive.html" class="btn-page-2">Läs mer</a>
 	</section>
-	<div id="tidigare"></div><br><br>
+	<div id="tidigare"></div>
 	<section class="page-3">
 		<h1 class="page-3-title-h1">Smakprov på våra projekt</h1>
 		<div class="orange-page-3"></div>
@@ -95,7 +95,7 @@
 		</div>
 		<a href="views/team.html" class="btn-page-4">Läs mer!<a>
 		</section>
-		<div id="kontakt"></div><br><br><br>
+		<div id="kontakt"></div>
 		<section class="page-5">
 			<h1 class="page-5-title-h1">Kontakta oss</h1>
 			<div class="orange-page-5"></div>
