--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 		<h1 class="page-2-title-h1" >Vi är experter på responsiv design</h1>
 		<div class="orange-page-2"></div>
-		<img src="img/responsive-phone.png">
+		<img src="img/responsive-web-design.png">
 		<p class="page-2-p">
 			Vi fixar webplater för alla dina enheter 
 			med en smidig responsiv design 
