--- a/index.html
+++ b/index.html
@@ -70,12 +70,7 @@
 	<section class="page-3">
 		<h1 class="page-3-title-h1">Smakprov på våra projekt</h1>
 		<div class="orange-page-3"></div>
-		<div class="page-3-flex-container">
-			<figure class="flex-item">INSERT PICS</figure>
-			<figure class="flex-item">INSERT PICS</figure>
-			<figure class="flex-item">INSERT PICS</figure>
-			<figure class="flex-item">INSERT PICS</figure>
-		</div>
+		<img class= "projectImg" src="img/webDevelopment.png">
 		<p class="page-3-p">
 			Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!
 		</p>
