--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+	<div class="bg-color">
+	<div class="shade">
 	<div class="navdiv">
 	<nav class="navbar">
 		<ul class="flex-box">
@@ -117,5 +119,7 @@
 
 		<script src="https://use.fontawesome.com/656255a524.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
+</div>
+</div>
 	</body>
 	</html>
