--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </div>
 	<section class="page-1"><div id="hem"></div>
 		<div class="page-1-div">
-			<h1 class="page-1-title-h1">En ung frontend webbyrå med fokus på responsiv design</h1>
+			<h1 class="page-1-title-h1">En ny webbyrå med fokus på frontend och responsiv design</h1>
 			<div class="orange-page-1"></div>
 			<button class="btn-page-1" onclick="buttonScroll(), smoothScroll(document.getElementById('kontakt'))">Kontakta oss</button>
 		</div>
@@ -61,7 +61,7 @@
 		<div class="orange-page-2"></div>
 		<img src="img/responsive-web-design.png">
 		<p class="page-2-p">
-			Vi fixar webplater för alla dina enheter 
+			Vi bygger webplatser för alla dina enheter 
 			med en smidig responsiv design 
 			för att få maxial upplevelse på din hemsida. 
 		</p>
@@ -73,9 +73,9 @@
 		<div class="orange-page-3"></div>
 		<img class= "projectImg" src="img/webDevelopment.png">
 		<p class="page-3-p">
-			Ett uravla av våra projekt för att förfina din upplevelse hos oss. Besäll din webplast idag!
+			Ett urval av våra projekt med några av våra nöjda kunder!
 		</p>
-		<a href="views/projects.html" class="btn-page-3">Beställ nu!</a>
+		<a href="views/projects.html" class="btn-page-3">Läs mer</a>
 	</section>
 	<div id="team"></div>
 	<section class="page-4" id="bg-door">
@@ -95,8 +95,8 @@
 			<h1 class="page-5-title-h1">Kontakta oss</h1>
 			<div class="orange-page-5"></div>
 			<p class="page-5-p">
-				Skriv till oss om du vill att vi ska
-				designa din hemsida eller om du undrar något!
+				Det spelar ingen roll om du vill att vi ska designa din sida eller om du bara vill ställa en enkel fråga,
+				skriv till oss och vi kommer att försöka svara så fort vi kan !
 			</p>
 			<form>
 				<input class="contact" type="text" name="name" placeholder="Namn">
