--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<div class="orange-page-2"></div>
 		<img src="img/responsive-web-design.png">
 		<p class="page-2-p">
-			Vi bygger webplatser för alla dina enheter 
+			Vi bygger webbplatser för alla dina enheter 
 			med en smidig responsiv design 
 			för att få maxial upplevelse på din hemsida. 
 		</p>
