Index sida ändringar

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<div class="orange-page-2"></div>
 		<img src="img/responsive-web-design.png">
 		<p class="page-2-p">
-			Vi bygger webbplatser för alla dina enheter 
+			Vi bygger webplatser för alla dina enheter 
 			med en smidig responsiv design 
 			för att få maxial upplevelse på din hemsida. 
 		</p>
@@ -79,14 +79,15 @@
 	</section>
 	<div id="team"></div>
 	<section class="page-4" id="bg-door">
-		<div class="title-div">
-			<h1 class="page-4-title-h1">VÅRAT TEAM</h1>
-		</div>
+		
+			<h1 class="page-2-title-h1">VÅRAT TEAM</h1>
+	
 		<div class="p-div">
 			<p class="page-4-p">
 				År 2016 så började vi vår resa tillsammans på Nackademin i Stockholm och vi bestämde oss för att starta en egen webbyrå.
 				Vill du lära känna oss bättre så kan du trycka här.
 			</p>
+			<img class="teamPic" src="img/team.png" alt="team">
 		</div>
 		<a href="views/team.html" class="btn-page-4">Läs mer!<a>
 		</section>
