--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<div id="team"></div>
 	<section class="page-4" id="bg-door">
 		
-			<h1 class="page-2-title-h1">VÅRAT TEAM</h1>
+			<h1 class="page-2-title-h1">Vårat team</h1>
 	
 		<div class="p-div">
 			<p class="page-4-p">
