added alt= to img tags on index and responsive.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<nav class="navbar">
 				<ul class="flex-box">
 					<li class="test">
-						<a href="index.html"><img class="logo-img" src="img/xlnt-logo-official-new.png"></a>
+						<a href="index.html"><img class="logo-img" src="img/xlnt-logo-official-new.png" alt="XLNT Media logo"></a>
 					</li>
 					<li class="hamburger-position" align="right">
 						<div id="nav-icon" align="right" onclick="buttonpress()">
@@ -59,7 +59,7 @@
 
 			<h1 class="page-2-title-h1" >Vi är experter på responsiv design</h1>
 			<div class="orange-page-2"></div>
-			<img src="img/responsive-web-design.png">
+			<img src="img/responsive-web-design.png" alt="phone-tablet-laptop-desktop">
 			<p class="page-2-p">
 				Vi bygger webplatser för alla dina enheter 
 				med en smidig responsiv design 
@@ -71,7 +71,7 @@
 		<section class="page-3">
 			<h1 class="page-3-title-h1">Smakprov på våra projekt</h1>
 			<div class="orange-page-3"></div>
-			<img class= "projectImg" src="img/webDevelopment.png">
+			<img class= "projectImg" src="img/webDevelopment.png" alt="html5-css-JS-laptop">
 			<p class="page-3-p">
 				Ett urval av våra projekt med några av våra nöjda kunder!
 			</p>
