Added visual for NoScriptMenu

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<li class="test">
 						<a href="index.html"><img class="logo-img" src="img/xlnt-logo-official-new.png" alt="XLNT Media logo"></a>
 					</li>
+					<ul><li style="color:white;">HÄR LÄGGER VI IN MENYN SOM SKA FUNGERA PÅ NO-SCRIPT</li></ul>
 					<li class="hamburger-position" align="right">
 						<div id="nav-icon" align="right" onclick="buttonpress()">
 							<span></span>
@@ -28,6 +29,7 @@
 						</div>
 					</li> 
 				</ul>
+				 
 				<div class="box active">
 					<ul class="menuDropdownUL">
 						<div class="menuscroll" onclick="notTrue() ,smoothScroll(document.getElementById('hem'))">
