--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
 					<li class="test">
 						<a href="index.html"><img class="logo-img" src="img/xlnt-logo-official-new.png" alt="XLNT Media logo"></a>
 					</li>
-					<ul><li style="color:white;">HÄR LÄGGER VI IN MENYN SOM SKA FUNGERA PÅ NO-SCRIPT</li></ul>
+					<noscript>
+						<ul class="lihidden">
+							<li class="lihidden">Hem</li>
+							<li class="lihidden">Tidigare Projekt</li>
+							<li class="lihidden">Responsiv Design</li>
+							<li class="lihidden">Kontakta Oss</li>
+						</ul>
+					</noscript>
+					
 					<li class="hamburger-position" align="right">
 						<div id="nav-icon" align="right" onclick="buttonpress()">
 							<span></span>
@@ -30,7 +38,7 @@
 						</div>
 					</li> 
 				</ul>
-				 
+
 				<div class="box active">
 					<ul class="menuDropdownUL">
 						<div class="menuscroll" onclick="notTrue() ,smoothScroll(document.getElementById('hem'))">
@@ -82,9 +90,9 @@
 		</section>
 		<div id="team"></div>
 		<section class="page-4" id="bg-door">
-			
+
 			<h1 class="page-2-title-h1">Vårat team</h1>
-			
+
 			<div class="p-div">
 				<p class="page-4-p">
 					År 2016 så började vi vår resa tillsammans på Nackademin i Stockholm och vi bestämde oss för att starta en egen webbyrå.
