Added ugly hack for button for non-js-users

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 			<div class="page-1-div">
 				<h1 class="page-1-title-h1">En ny webbyrå med fokus på frontend och responsiv design</h1>
 				<div class="orange-page-1"></div>
-				<button class="btn-page-1" onclick="buttonScroll(), smoothScroll(document.getElementById('kontakt'))">Kontakta oss</button>
+				<button class="btn-page-1" onclick="buttonScroll(), smoothScroll(document.getElementById('kontakt'))">
+				<noscript><a class="hiddenButton"  href="http://google.com"><div class="hiddenButton" ></div></a></noscript>Kontakta oss</button>
 			</div>
 		</section>
 		<div id="responsiv"></div>
