index.html validation update och OSCAR ÄR EN DOUCHEBAG

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 						</ul>
 					</noscript>
 					
-					<li class="hamburger-position" align="right">
-						<div id="nav-icon" align="right" onclick="buttonpress()">
+					<li class="hamburger-position">
+						<div id="nav-icon" onclick="buttonpress()">
 							<span></span>
 							<span></span>
 							<span></span>
