validation clean up for all html done, team.html still has one error

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				</p>
 				<img class="teamPic" src="img/team.png" alt="team">
 			</div>
-			<a href="views/team.html" class="btn-page-4">Läs mer!<a>
+			<a href="views/team.html" class="btn-page-4">Läs mer!</a>
 			</section>
 			<div id="kontakt"></div>
 			<section class="page-5">
@@ -115,7 +115,7 @@
 					<input class="contact" type="text" name="name" placeholder="Namn">
 					<input class="contact" type="text" name="email" placeholder="Email">
 					<textarea class="txt-style" placeholder="Kommentar"></textarea> 
-					<input class="btn-page-5" type="submit" name="Skicka"></input>
+					<input class="btn-page-5" type="submit" name="Skicka">
 				</form>
 			</section>
 			<footer>
