size fix, gammalt är fortfarande kvar men vi fpr ta det imorgon

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					År 2016 så började vi vår resa tillsammans på Nackademin i Stockholm och vi bestämde oss för att starta en egen webbyrå.
 					Vill du lära känna oss bättre så kan du trycka här.
 				</p>
-				<img class="teamPic" src="img/team.png" alt="team">
+				<img class="teamPic" src="img/team@0,5x.png" alt="team">
 			</div>
 			<a href="views/team.html" class="btn-page-4">Läs mer!</a>
 			</section>
