--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 			<div class="page-1-div">
 				<h1 class="page-1-title-h1">En ny webbyrå med fokus på frontend och responsiv design</h1>
 				<div class="orange-page-1"></div>
+					<div class="nojsDIV">
+					<h4> Hej ! Det verkar som att du inte har Javascript aktiverat.</h4>
+					<h4> Du kommer kunna komma åt den viktigaste informationen på sidan men alla funktioner kommer inte att fungera. </h4>
+					</div>
 				<button class="btn-page-1" onclick="buttonScroll(), smoothScroll(document.getElementById('kontakt'))">
 				<noscript><a class="hiddenButton"  href="http://google.com"><div class="hiddenButton" ></div></a></noscript>Kontakta oss</button>
 			</div>
