--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 		<section class="page-4" id="bg-door">
 
 			<h1 class="page-2-title-h1">Vårat team</h1>
+			<div class="orange-page-3"></div>
 				<p class="page-4-p">
 					År 2016 så började vi vår resa tillsammans på Nackademin i Stockholm och vi bestämde oss för att starta en egen webbyrå.
 					Vill du lära känna oss bättre så kan du trycka här.
